--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "compile:sass": "node-sass sass/main.scss .dist/css/style.css -w"
+        "compile:sass": "node-sass sass/main.scss docs/css/style.css -w"
     },
     "author": "Elena",
     "license": "ISC",
